2007-01-15  Bastien Nocera  <hadess@hadess.net>

	* src/backend/bacon-video-widget-gst-0.10.c:
	(bvw_error_from_gst_error): Remove unused variable

2007-01-15  Bastien Nocera  <hadess@hadess.net>

	* src/plparse/totem-pl-parser-lines.c: (totem_pl_parser_add_m3u):
	* src/plparse/totem-pl-parser-pls.c:
	(totem_pl_parser_add_pls_with_contents), (totem_pl_parser_add_pls):
	* src/plparse/totem-pl-parser-pls.h:
	* src/plparse/totem-pl-parser-private.h:
	* src/plparse/totem-pl-parser.c: (totem_pl_parser_init),
	(totem_pl_parser_add_url_valist), (totem_pl_parser_add_url),
	(totem_pl_parser_add_one_url): Add support for "arbitrary"
	properties being passed along to the signal emitter (although
	we don't emit signals with the extra info yet)

2007-01-15  Bastien Nocera  <hadess@hadess.net>

	* browser-plugin/totemPlugin.cpp: ShowDisplay=FALSE hides a
	property bar with WMP, not the main video display!

2007-01-15  Bastien Nocera  <hadess@hadess.net>

	* browser-plugin/totem-plugin-viewer.c:
	(totem_embedded_set_logo_by_name): Avoid warnings when in
	audio only mode, and trying to set an error/logo image

2007-01-15  Bastien Nocera  <hadess@hadess.net>

	* src/plparse/totem-pl-parser-media.c:
	(totem_pl_parser_iso_get_title), (totem_pl_parser_add_iso):
	* src/plparse/totem-pl-parser.c: Add support for ISO files
	masquerading as .img files, when gnome-vfs tells us it's of
	type application/x-extension-img (Closes: #390824)

2007-01-15  Bastien Nocera  <hadess@hadess.net>

	* browser-plugin/totem-plugin-viewer.c:
	(on_copy_location1_activate): Don't copy the base URI when
	we want the location of the current movie, and playing from the
	browser stream (Closes: #395792)

2007-01-14  Bastien Nocera  <hadess@hadess.net>

	* data/totem-ui.xml:
	* src/totem-menu.c: (clear_playlist_action_callback):
	* src/totem-playlist.c: (totem_playlist_clear):
	* src/totem.c: (totem_action_set_mrl_with_warning):
	Patch from Rene Vahtel <vahtel@starman.ee> to add a "Clear Playlist"