@@ -1,5 +1,11 @@
 2007-01-15  Bastien Nocera  <hadess@hadess.net>
 
+	* browser-plugin/README:
+	* browser-plugin/totemPlugin.cpp: add another envvar to
+	make the viewer abort on warnings, document the envvars used
+
+2007-01-15  Bastien Nocera  <hadess@hadess.net>
+
 	* src/backend/bacon-video-widget-gst-0.10.c:
 	(bvw_error_from_gst_error): Remove unused variable
 
